--- a/styles/style.css
+++ b/styles/style.css
@@ -6,10 +6,12 @@ h1{
   color: #293540;
 }
 
+
 li{
   padding: 5px;
   margin-bottom: 5px;
   width: 200px;
   color: #293540;
-  border: solid 1px #FEC20F;
+  border: dashed 1px #FEC20F;
+  font-weight: bold;
 }
